package com.example;

public class App {
    public static void main(String[] args) throws Exception {

        CLI cli = new CLI();
        // DB data_source = DB.getInstance();
        // data_source.insertJSON("output.json");
    }
}

// 1. Set-ExecutionPolicy Unrestricted -Scope CurrentUser
// 2. activate the venv
// 3. run java